--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
 	"dependencies": {
-		"astro": "^5.11.1"
+		"@astrojs/react": "^4.3.0",
+		"@astrojs/vue": "^5.1.0",
+		"@heroicons/react": "^2.2.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"astro": "^5.11.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwindcss": "^4.1.11",
+		"vue": "^3.5.17"
 	},
 	"scripts": {
 		"dev": "astro dev",
