--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -35,6 +35,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest --activate
       - name: Detect package manager
         id: detect-package-manager
         run: |
